fix button alignment

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -36,7 +36,7 @@ button {
   display: block;
   background: white;
   border: 1px solid #eee;
-  align-items: center;
+  margin: 0 auto;
   padding-left: 24px;
   padding-right: 24px;
   padding-top: 8px;
